Dark mode Sing Up fixed

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@ body {
     transition-all duration-[0.5s];
   }
 
+  .InputHolder > input {
+    border-radius: 0 10px 10px 0;
+  }
+
   .ResponsiveIMG {
     @apply block mt-[50px] max-md:hidden
            max-lg:w-1/3 max-lg:h-[300px] max-lg:mt-[100px]  
